@@ -1,12 +1,11 @@
-package com.than00ber.mcmg;
+package com.than00ber.mcmg.core;
 
-import com.than00ber.mcmg.util.config.Configurable;
-import com.than00ber.mcmg.util.config.MiniGameProperty;
+import com.than00ber.mcmg.core.config.Configurable;
+import com.than00ber.mcmg.core.config.MiniGameProperty;
 import org.bukkit.ChatColor;
 import org.bukkit.Sound;
 import org.bukkit.entity.Player;
 
-import java.util.Arrays;
 import java.util.List;
 import java.util.function.Consumer;
 
@@ -14,8 +13,8 @@ import static org.bukkit.scoreboard.Team.OptionStatus;
 
 public class MiniGameTeam implements Configurable {
 
-    private final MiniGameProperty.StringProperty teamId;
-    private final MiniGameProperty.StringProperty displayName;
+    private final MiniGameProperty.StringProperty name;
+    private final MiniGameProperty.StringProperty visibleName;
     private final MiniGameProperty.DoubleProperty weight;
     private final MiniGameProperty.IntegerProperty threshold;
     private final MiniGameProperty.ChatColorProperty color;
@@ -28,9 +27,9 @@ public class MiniGameTeam implements Configurable {
     private final MiniGameProperty.BooleanProperty disableWhileGrace;
     private final Consumer<Player> preparePlayer;
 
-    public MiniGameTeam(
-            String teamId,
-            String displayName,
+    private MiniGameTeam(
+            String name,
+            String visibleName,
             double weight,
             int threshold,
             ChatColor color,
@@ -43,27 +42,27 @@ public class MiniGameTeam implements Configurable {
             boolean disableWhileGrace,
             Consumer<Player> preparePlayer
     ) {
-        this.teamId = new MiniGameProperty.StringProperty(teamId + ".id", teamId);
-        this.displayName = new MiniGameProperty.StringProperty(teamId + ".name", displayName);
-        this.weight = new MiniGameProperty.DoubleProperty(teamId + ".weight", weight);
-        this.threshold = new MiniGameProperty.IntegerProperty(teamId + ".threshold", threshold);
-        this.color = new MiniGameProperty.ChatColorProperty(teamId + ".color", color);
-        this.visibility = new MiniGameProperty.EnumProperty<>(teamId + ".visibility", OptionStatus.class, visibility);
-        this.catchPhrase = new MiniGameProperty.StringProperty(teamId + ".phrase", catchPhrase);
-        this.objective = new MiniGameProperty.StringProperty(teamId + ".objective", objective);
-        this.sound = new MiniGameProperty.EnumProperty<>(teamId + ".sound", Sound.class, sound);
-        this.isSpectator = new MiniGameProperty.BooleanProperty(teamId + ".spectator", isSpectator);
-        this.isRequired = new MiniGameProperty.BooleanProperty(teamId + ".required", isRequired);
-        this.disableWhileGrace = new MiniGameProperty.BooleanProperty(teamId + ".disableWhileGrace", disableWhileGrace);
+        this.name = new MiniGameProperty.StringProperty("name", name);
+        this.visibleName = new MiniGameProperty.StringProperty("visibleName", visibleName);
+        this.weight = new MiniGameProperty.DoubleProperty("weight", weight);
+        this.threshold = new MiniGameProperty.IntegerProperty("threshold", threshold);
+        this.color = new MiniGameProperty.ChatColorProperty("color", color);
+        this.visibility = new MiniGameProperty.EnumProperty<>("visibility", OptionStatus.class, visibility);
+        this.catchPhrase = new MiniGameProperty.StringProperty("phrase", catchPhrase);
+        this.objective = new MiniGameProperty.StringProperty("objective", objective);
+        this.sound = new MiniGameProperty.EnumProperty<>("sound", Sound.class, sound);
+        this.isSpectator = new MiniGameProperty.BooleanProperty("spectator", isSpectator);
+        this.isRequired = new MiniGameProperty.BooleanProperty("required", isRequired);
+        this.disableWhileGrace = new MiniGameProperty.BooleanProperty("disableWhileGrace", disableWhileGrace);
         this.preparePlayer = preparePlayer;
     }
 
-    public String getTeamId() {
-        return teamId.get();
+    public String getName() {
+        return name.get();
     }
 
-    public String getDisplayName() {
-        return displayName.get();
+    public String getVisibleName() {
+        return visibleName.get();
     }
 
     public Double getWeight() {
@@ -111,15 +110,9 @@ public class MiniGameTeam implements Configurable {
     }
 
     @Override
-    public String getConfigName() {
-        return getTeamId();
-    }
-
-    @Override
     public List<MiniGameProperty<?>> getProperties() {
-        return Arrays.asList(
-                teamId,
-                displayName,
+        return List.of(
+                visibleName,
                 weight,
                 threshold,
                 color,
@@ -135,8 +128,8 @@ public class MiniGameTeam implements Configurable {
 
     public static class Builder {
 
-        private final String teamId;
-        private String displayName;
+        private final String name;
+        private String visibleName;
         private double weight;
         private int threshold;
         private ChatColor color;
@@ -149,9 +142,9 @@ public class MiniGameTeam implements Configurable {
         private boolean disableWhileGrace;
         Consumer<Player> preparePlayer;
 
-        public Builder(String id) {
-            teamId = id;
-            displayName = teamId;
+        public Builder(String name) {
+            this.name = name;
+            visibleName = name;
             weight = 0;
             threshold = 0;
             color = ChatColor.WHITE;
@@ -163,7 +156,7 @@ public class MiniGameTeam implements Configurable {
         }
 
         public Builder setDisplayName(String name) {
-            displayName = name;
+            visibleName = name;
             return this;
         }
 
@@ -224,8 +217,8 @@ public class MiniGameTeam implements Configurable {
 
         public MiniGameTeam build() {
             return new MiniGameTeam(
-                    teamId,
-                    displayName,
+                    name,
+                    visibleName,
                     weight,
                     threshold,
                     color,
